<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/item_background"
    android:elevation="4dp"
    android:padding="4dp">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="W, 2:3"
        tools:src="@drawable/poster" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="@id/iv_poster"
        app:layout_constraintStart_toStartOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:alpha="0.7"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_age_restriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ageRestriction" />

    <RatingBar
        android:id="@+id/rb_rate"
        style="@style/MyRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:transformPivotX="0dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/reddish_pink"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@id/rb_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/genres" />


    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/light_grayish_blue"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/rb_rate"
        tools:text="@string/numberOfReviews" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/light_grayish_blue"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="@string/duration" />

</androidx.constraintlayout.widget.ConstraintLayout>